--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./5.png" alt="图片" width="400" height="300"> -->
         </div>
     </div>
-    <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="./jquery-3.3.1.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
